Add twitter bootstrap support

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,7 +1,5 @@
-body {
-  font: 14px Helvetica, Arial, sans-serif;
-}
+@import 'bootstrap.css';
 
-a {
-  color: #00B7FF;
+body {
+  padding-top: 60px;
 }
