Add twitter bootstrap support

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,7 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  div(class='hero-unit')
+    h2 Welcome
+    p
+      a(href='#', class='btn btn-primary btn-large') Create a New Canvas
