--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,7 @@ html
     title Canvas Model Design :: #{title}
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    .navbar.navbar-inverse.navbar-fixed-top
+    .navbar.navbar-fixed-top
       .navbar-inner
         .container-fluid
           a(class="brand", href="/") Canvas Model Design
