Create new canvas with unique and random public url

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,4 +4,4 @@ block content
   div(class='hero-unit')
     h2 Welcome
     p
-      a(href='#', class='btn btn-primary btn-large') Create a New Canvas
+      a(href='/canvas/new', class='btn btn-primary btn-large') Create a New Canvas
