--- a/views/index.jade
+++ b/views/index.jade
@@ -4,4 +4,15 @@ block content
   div(class='hero-unit')
     h2 Welcome
     p
-      a(href='/canvas/new', class='btn btn-primary btn-large') Create a New Canvas
+      a(href='#canvas-new-modal', role='button', data-toggle='modal', class='btn btn-primary btn-large') Create a New Canvas
+
+  div(id='canvas-new-modal', class='modal hide fade')
+    form(action='/canvas/create', method='POST')
+      .modal-header
+        button(type='button', class='close', data-dismiss='modal', aria-hidden='true') x
+        h3 Setup your Canvas
+      .modal-body
+        input(name='title', type='text', placeholder='Canvas title')
+      .modal-footer
+        button(class='btn', data-dismiss='modal', aria-hidden='true') Cancel
+        button(type='submit', class='btn btn-primary') Create!
