--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,3 +14,5 @@ html
         block content
     script(src='/javascripts/jquery.js')
     script(src='/javascripts/bootstrap.js')
+    script(src='/javascripts/handlebars.js')
+    script(src='/javascripts/canvas.js')
