--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,4 +15,5 @@ html
     script(src='/javascripts/jquery.js')
     script(src='/javascripts/bootstrap.js')
     script(src='/javascripts/handlebars.js')
+    script(src='/socket.io/socket.io.js')
     script(src='/javascripts/canvas.js')
