Refactor file organization and add a base chat support

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,8 +12,9 @@ html
     .container-fluid
       .row-fluid
         block content
+    script(src='/socket.io/socket.io.js')
     script(src='/javascripts/jquery.js')
     script(src='/javascripts/bootstrap.js')
     script(src='/javascripts/handlebars.js')
-    script(src='/socket.io/socket.io.js')
+    script(src='/javascripts/chat.js')
     script(src='/javascripts/canvas.js')
