--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ block content
       a(href='#canvas-new-modal', role='button', data-toggle='modal', class='btn btn-primary btn-large') Create a New Canvas
 
   div(id='canvas-new-modal', class='modal hide fade')
-    form(action='/canvas/create', method='POST')
+    form(action='/canvas/create', method='POST', class='form-vertical')
       .modal-header
         button(type='button', class='close', data-dismiss='modal', aria-hidden='true') x
         h3 Setup your Canvas
