--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,6 +14,7 @@ html
         block content
     script(src='/socket.io/socket.io.js')
     script(src='/javascripts/jquery.js')
+    script(src='/javascripts/jcanvas.js')
     script(src='/javascripts/bootstrap.js')
     script(src='/javascripts/handlebars.js')
     script(src='/javascripts/chat.js')
