First steps on canvas. Merged canvas data id

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,8 +4,11 @@ body {
 }
 #canvas {
   border: solid 1px #ccc;
-  height: 80%;
+}
+#main {
+  display: block;
   width: 100%;
+  height: 550px;
 }
 #chat {
   border: solid 1px #ccc;
