--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -6,8 +6,12 @@ body {
 
 #canvas {
   border: solid 1px #ccc;
-  height: 80%;
-  width: 100%;
+}
+
+#main {
+  display:block; 
+  width:100%; 
+  height:550px;
 }
 
 #chat {
