--- a/views/canvas/canvas.jade
+++ b/views/canvas/canvas.jade
@@ -4,6 +4,8 @@ block content
   .span9
       h2 #{canvas.title}
         small Canvas type
-      canvas(id='canvas', data-canvas-id='#{canvas.public_id}')
+
+      div(role='main', id='main')
+        canvas(id='canvas', width=940, height=530, data-canvas-id='#{canvas.public_id}') Here comes the canvas
   .span3
       include chat
