--- a/views/canvas/canvas.jade
+++ b/views/canvas/canvas.jade
@@ -5,6 +5,9 @@ block content
       h2 #{canvas.title}
         small Canvas type
 
+      div#menubar
+        button#add_postit Add +
+
       div(role='main', id='main')
         canvas(id='canvas', width=940, height=530, data-canvas-id='#{canvas.public_id}', data-user-id='#{userId}') Here comes the canvas
   .span3
