--- a/views/canvas/canvas.jade
+++ b/views/canvas/canvas.jade
@@ -6,6 +6,6 @@ block content
         small Canvas type
 
       div(role='main', id='main')
-        canvas(id='canvas', width=940, height=530, data-canvas-id='#{canvas.public_id}', data-user-id='#{userId}') Here comes the canvas
+        canvas(id='canvas', width=940, height=530, data-canvas-id='#{canvas.public_id}') Here comes the canvas
   .span3
       include chat
