Added templates to layout. Fixed drawing canvas BG.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,4 +18,5 @@ html
     script(src='/javascripts/bootstrap.js')
     script(src='/javascripts/handlebars.js')
     script(src='/javascripts/chat.js')
+    script(src='/javascripts/canvas-tempates.js')
     script(src='/javascripts/canvas.js')
