--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,3 +16,28 @@ body {
   margin-bottom: 5px;
   padding: 20px;
 }
+
+.canvas-menu {
+    width: 800px;
+    margin: 0 auto;
+}
+
+.canvas-menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0 auto;
+    width: 42em;
+    height: 24em;
+}
+
+.canvas-menu li {
+    height: 20em;
+    width: 30em;
+    text-align: center;
+    cursor: pointer;
+}
+
+.canvas-menu li img {
+    width: 100%;
+    height: 100%;
+}
