--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,22 +1,48 @@
 @import 'bootstrap.css';
 
 body {
-  padding-top: 50px;
+    padding-top: 50px;
 }
 
 #canvas {
-  border: solid 1px #ccc;
+    border: solid 1px #ccc;
 }
 
 #main {
-  display:block; 
-  width:100%; 
-  height:550px;
+    display: block;
+    width: 100%;
+    height: 550px;
 }
 
 #chat {
-  border: solid 1px #ccc;
-  height: 80%;
-  margin-bottom: 5px;
-  padding: 20px;
+    border: solid 1px #ccc;
+    height: 80%;
+    margin-bottom: 5px;
+    padding: 20px;
+}
+
+
+.canvas-menu {
+    width: 800px;
+    margin: 0 auto;
+}
+
+.canvas-menu ul {
+    list-style: none;
+    padding: 0;
+    margin: 0 auto;
+    width: 42em;
+    height: 24em;
+}
+
+.canvas-menu li {
+    height: 20em;
+    width: 30em;
+    text-align: center;
+    cursor: pointer;
+}
+
+.canvas-menu li img {
+    width: 100%;
+    height: 100%;
 }
