--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -9,14 +9,23 @@ body {
 }
 
 #main {
-  display:block; 
-  width:100%; 
+  display:block;
+  width:100%;
   height:550px;
 }
 
 #chat {
-  border: solid 1px #ccc;
-  height: 80%;
-  margin-bottom: 5px;
-  padding: 20px;
+
+  h1 {
+    font-size: 16px;
+  }
+
+  #chat-messages {
+    height: 400px;
+    border: solid 1px #ccc;
+    padding: 5px;
+    margin-bottom: 5px;
+    overflow: auto;
+  }
+
 }
