--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -26,6 +26,18 @@ body {
     padding: 5px;
     margin-bottom: 5px;
     overflow: auto;
+
+    .message {
+      background-color: #efefef;
+      border: solid 1px #ccc;
+      padding: 2px;
+      margin: 2px;
+    }
+
+    .announcement {
+      font-style: italic;
+      color: #ccc;
+    }
   }
 
   display: block;
