--- a/views/canvas/chat.jade
+++ b/views/canvas/chat.jade
@@ -2,11 +2,12 @@
   h1 Chat
   #chat-messages
     // Messages
-  input(id='message', type='text', placeholder='Enter message...')
-  button(id='message-send', class='btn btn-primary btn-small') Send
+  div(class='input-append')
+    input(id='message', type='text', placeholder='Enter message...')
+    button(id='message-send', class='btn btn-primary') Send
 
 #chat-announce-template.hide
-  p.announce {{announce}}
+  p.announcement {{announce}}
 
 #chat-message-template.hide
   p.message {{user.avatar}} {{user.nickname}} : {{message}}
