Add styles and status to chat

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -16,14 +16,22 @@ body {
 
 #chat {
 
-  h1 {
-    font-size: 16px;
+  #header {
+
+    #counter {
+      font-size: 12px;
+    }
+
+    #status {
+      float: right;
+    }
   }
 
   #chat-messages {
     height: 400px;
     border: solid 1px #ccc;
     padding: 5px;
+    margin-top: 5px;
     margin-bottom: 5px;
     overflow: auto;
 
