--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,13 +15,17 @@ body {
   width: 100%;
   height: 550px;
 }
-#chat h1 {
-  font-size: 16px;
+#chat #header #counter {
+  font-size: 12px;
+}
+#chat #header #status {
+  float: right;
 }
 #chat #chat-messages {
   height: 400px;
   border: solid 1px #ccc;
   padding: 5px;
+  margin-top: 5px;
   margin-bottom: 5px;
   overflow: auto;
 }
