--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -40,6 +40,22 @@ body {
       border: solid 1px #ccc;
       padding: 2px;
       margin: 2px;
+
+      .content {
+        width: 100%;
+      }
+
+      img {
+        float: left;
+        padding: 2px;
+      }
+
+      .author {
+        text-align: right;
+        font-size: 10px;
+        color: #666;
+        margin: 1px;
+      }
     }
 
     .announcement {
