Add about page template

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,8 @@ html
         .container-fluid
           a(class="brand", href="/") Canvas Model Design
           ul(class="nav")
+            li
+              a(href='/about') About
     .container-fluid
       .row-fluid
         block content
