--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,12 +8,12 @@ body {
 #main {
   display: block;
   width: 100%;
-  height: 550px;
+  height: '550px';
 }
 #chat {
   display: block;
   width: 100%;
-  height: 550px;
+  height: '550px';
 }
 #chat #header #counter {
   font-size: 12px;
@@ -72,4 +72,20 @@ body {
 .canvas-menu li img {
   width: 100%;
   height: 100%;
+}
+#footer {
+  height: 40px;
+  padding: 5px;
+  background-color: #f5f5f5;
+}
+.vote-up {
+  margin-top: 8px;
+}
+.credits {
+  margin: 10px 0;
+}
+.credits p {
+  float: left;
+  margin-right: 10px;
+  margin-bottom: 20px;
 }
