--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -4,6 +4,8 @@ body {
     padding-top: 50px;
 }
 
+@height: '550px';
+
 #canvas {
     border: solid 1px #ccc;
 }
@@ -11,7 +13,7 @@ body {
 #main {
   display:block;
   width:100%;
-  height:550px;
+  height: @height;
 }
 
 #chat {
@@ -66,7 +68,7 @@ body {
 
   display: block;
   width: 100%;
-  height: 550px;
+  height: @height;
 }
 
 .canvas-menu {
@@ -92,4 +94,24 @@ body {
 .canvas-menu li img {
     width: 100%;
     height: 100%;
+}
+
+#footer {
+  height: 40px;
+  padding: 5px;
+  background-color: #f5f5f5;
+}
+
+.vote-up {
+  margin-top: 8px;
+}
+
+.credits {
+  margin: 10px 0;
+
+  p {
+    float: left;
+    margin-right: 10px;
+    margin-bottom: 20px;
+  }
 }
