Add team description to about page

--- a/views/about.jade
+++ b/views/about.jade
@@ -12,8 +12,36 @@ block content
 
     section
       h2 The Team
-      | Todo..
-
+      .row-fluid
+        div(class='span4')
+          .well
+            img(src='http://gravatar.com/avatar/775787e5017ef6319a728a060fa475d3?s=50', style='float:left; margin-right: 5px')
+            strong José Betancur (
+               a(href='http://twitter.com/betancur', target='_blank') @betancur
+              )
+            p Entrepreneur. User experience and iPhone/iPad developer, Usability freak an a digital photography enthusiast.
+        div(class='span4')
+          .well
+            img(src='http://gravatar.com/avatar/c2d1139b787a469e13229070d6be918c?s=50', style='float:left; margin-right: 5px')
+            strong Julián Duque (
+               a(href='http://twitter.com/julian_duque', target='_blank') @julian_duque
+              )
+            p Developer by Passion
+      .row-fluid
+        div(class='span4')
+          .well
+            img(src='http://gravatar.com/avatar/fbb1d6b64ea23bc837465f172c581f2f?s=50', style='float:left; margin-right: 5px')
+            strong Jhon Jaiver López (
+               a(href='http://twitter.com/jaiversin', target='_blank') @jaiversin
+              )
+            p Ing. de Sistemas y Computación, Universidad del Quindío.
+        div(class='span4')
+          .well
+            img(src='http://gravatar.com/avatar/50ece382ed5fadc4ccfaa332e0333e2a?s=50', style='float:left; margin-right: 5px')
+            strong Juan P López (
+               a(href='http://twitter.com/dolcalmi', target='_blank') @dolcalmi
+              )
+            p Líder Técnico Intergrupo Mobile
     section
       h2 Credits
       | Credits...
