add about description

--- a/views/about.jade
+++ b/views/about.jade
@@ -8,7 +8,21 @@ block content
 
     section
       h2 Description
-      | Todo..
+
+      p
+        |Start iterate your Business Models!
+        br
+        br
+        |The Canvas Model Design is a tool for the entrepreneur, it combines the Business Model Canvas, the Lean Canvas, the Business Model You in one place. Enabling you to draw your Startup in the easiest way.
+        br
+        br
+        small The Business Model Canvas was initially proposed by Alexander Osterwalder.
+        br
+        small The Business Model you is an adaptation from the original Business Model Canvas made by Alexander Osterwalder.
+        br
+        small The Lean Canvas is an adaptation from the original Business Model Canvas made by Ash Maurya.
+
+       
 
     section
       h2 The Team
