change empty by lean canvas

--- a/views/index.jade
+++ b/views/index.jade
@@ -11,8 +11,8 @@ block content
                 a(href='#canvas-new-modal', role='button', data-toggle='modal', title="Personal Business Model Canvas", rel='pbmc')
                     img(alt="", src="images/canvas_bmy.png", data-toggle='modal' )
             li
-                a(href='#canvas-new-modal', role='button', data-toggle='modal', title="Empty Business Model Canvas", rel='bm')
-                    img(alt="", src="images/canvas_empty.png", data-toggle='modal' )
+                a(href='#canvas-new-modal', role='button', data-toggle='modal', title="Lean Business Model Canvas", rel='lbmc')
+                    img(alt="", src="images/canvas_lean.png", data-toggle='modal' )
 
   div(id='canvas-new-modal', class='modal hide fade')
     form(action='/canvas/create', method='POST', class='form-vertical')
