--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -74,6 +74,7 @@ body {
 .canvas-menu {
     width: 800px;
     margin: 0 auto;
+    background-color: #6595e5;
 }
 
 .canvas-menu ul {
@@ -114,4 +115,8 @@ body {
     margin-right: 10px;
     margin-bottom: 20px;
   }
+}
+
+.logo {
+    margin-left: 35px;
 }
