--- a/views/canvas/canvas.jade
+++ b/views/canvas/canvas.jade
@@ -12,3 +12,4 @@ block content
         canvas(id='canvas', width=940, height=530, data-canvas-id='#{canvas.public_id}') Here comes the canvas
   .span3
       include chat
+  script(src='/javascripts/canvas.js')
