--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,7 +1,7 @@
 @import 'bootstrap.css';
 
 body {
-    padding-top: 50px;
+    padding-top: 5px;
 }
 
 @height: '550px';
@@ -78,18 +78,17 @@ body {
 }
 
 .canvas-menu ul {
-    list-style: none;
-    padding: 0;
-    margin: 0 auto;
-    width: 42em;
-    height: 24em;
+  list-style: none;
+  padding: 0;
+  margin: 0 auto;
+  width: 42em;
+  height: 19em;
 }
-
 .canvas-menu li {
-    height: 20em;
-    width: 30em;
-    text-align: center;
-    cursor: pointer;
+  height: 20em;
+  width: 30em;
+  text-align: center;
+  cursor: pointer;
 }
 
 .canvas-menu li img {
@@ -116,7 +115,11 @@ body {
     margin-bottom: 20px;
   }
 }
+.logo ul {
+    list-style: none;
+    padding-top: 25px;
+}
 
-.logo {
-    margin-left: 35px;
+.logo a {
+    color: black;
 }
