--- a/views/layout-content.jade
+++ b/views/layout-content.jade
@@ -29,6 +29,7 @@ html
                 i(class='icon-heart')
               iframe(src="http://nodeknockout.com/iframe/intergrupo-mobile", frameborder='0', scrolling='no', allowtransparency='true', width='115', height='20')
     script(src='/javascripts/jquery.js')
+    script(src='/javascripts/bootstrap.js')
     script(src='/javascripts/jquery.roundabout.js')
     script(src='/javascripts/index.js')
     script
