Fix avatar size in chat log

--- a/views/canvas/chat.jade
+++ b/views/canvas/chat.jade
@@ -18,7 +18,7 @@
 
 #chat-message-template.hide
   div.message
-    img(src='')
+    img(src='', width='32')
     .content {{message}}
       p.author {{user.nickname}}
 
