--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -6,6 +6,10 @@ body {
 
 @height: '550px';
 
+h4 {
+    text-align: center;
+}
+
 #canvas {
     border: solid 1px #ccc;
 }
@@ -72,34 +76,35 @@ body {
 }
 
 .canvas-menu {
-    width: 800px;
-    margin: 0 auto;
-    background-color: #6595e5;
+  margin: 0 auto;
+  background-color: #6595e5;
 }
-
 .canvas-menu ul {
   list-style: none;
   padding: 0;
   margin: 0 auto;
-  width: 42em;
-  height: 19em;
+  width: 52em;
+  height: 20em;
 }
 .canvas-menu li {
-  height: 20em;
+  height: 16em;
   width: 30em;
   text-align: center;
   cursor: pointer;
 }
-
 .canvas-menu li img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+}
+.well-large {
+    padding-top: 0px !important;
 }
 
 #footer {
   height: 40px;
   padding: 5px;
-  background-color: #f5f5f5;
+  border-top: 2px solid #6595e5;
+  margin-top: 15px;
 }
 
 .vote-up {
@@ -122,4 +127,9 @@ body {
 
 .logo a {
     color: black;
+}
+
+.bg-highlight
+{
+  background: no-repeat url('../images/canvas_selected.png') center bottom;
 }
