click to create

--- a/views/index.jade
+++ b/views/index.jade
@@ -8,14 +8,18 @@ block content
                     h4 Business Model Canvas
                     a(href='#canvas-new-modal', role='button', data-toggle='modal', title="Business Model Canvas" , rel='BMC')    
                         img(alt="Business Model Canvas", src="images/canvas_bmg.png", data-toggle='modal' )
+                        | Click to create
                 li
                     h4 Lean Canvas
                     a(href='#canvas-new-modal', role='button', data-toggle='modal', title="Lean Canvas", rel='LC')
                         img(alt="Lean Canvas", src="images/canvas_lean.png", data-toggle='modal' )
+                        | Click to create
                 li
                     h4 Business Model You
                     a(href='#canvas-new-modal', role='button', data-toggle='modal', title="Business Model You", rel='BMY')
                         img(alt="Business Model You", src="images/canvas_bmy.png", data-toggle='modal' )
+                        | Click to create
+                
     .span12
     .row-fluid
         .span4.BMC
