--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -79,18 +79,25 @@ h4 {
   margin: 0 auto;
   background-color: #6595e5;
 }
+
 .canvas-menu ul {
   list-style: none;
   padding: 0;
   margin: 0 auto;
   width: 52em;
-  height: 20em;
+  height: 22em;
 }
 .canvas-menu li {
   height: 16em;
   width: 30em;
   text-align: center;
   cursor: pointer;
+}
+
+.canvas-menu li a {
+  color:  white !important;
+  font-weight: bold;
+  text-align: center;
 }
 .canvas-menu li img {
   width: 100%;
