--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,7 @@ body {
   padding-top: 5px;
 }
 h4 {
-    text-align: center;
+  text-align: center;
 }
 #canvas {
   border: solid 1px #ccc;
@@ -77,7 +77,7 @@ h4 {
   height: 100%;
 }
 .well-large {
-    padding-top: 0px !important;
+  padding-top: 0px !important;
 }
 #footer {
   height: 40px;
@@ -101,10 +101,8 @@ h4 {
   padding-top: 25px;
 }
 .logo a {
-    color: black;
+  color: black;
 }
-
-.bg-highlight
-{
+.bg-highlight {
   background: no-repeat url('../images/canvas_selected.png') center bottom;
 }
