good bye blue :)

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -57,7 +57,7 @@ h4 {
 }
 .canvas-menu {
   margin: 0 auto;
-  background-color: #6595e5;
+  background-color: #6ec568;
 }
 
 .canvas-menu ul {
@@ -88,7 +88,7 @@ h4 {
 #footer {
   height: 40px;
   padding: 5px;
-  border-top: 2px solid #6595e5;
+  border-top: 2px solid #6ec568;
   margin-top: 15px;
 }
 .vote-up {
