--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -75,6 +75,14 @@ h4 {
   height: @height;
 }
 
+.stickie {
+  margin: 3px;
+}
+
+.dropdown-menu {
+  padding-left:40px;
+}
+
 .canvas-menu {
   margin: 0 auto;
   background-color: #6ec568;
