--- a/views/canvas/chat.jade
+++ b/views/canvas/chat.jade
@@ -9,7 +9,7 @@
       span &nbsp; user(s) online
   #chat-messages
     // Messages
-  div(class='input-append')
+  div.input-append
     input(id='message', type='text', placeholder='Enter message...')
     button(id='message-send', class='btn btn-primary') Send
 
