Add a Canvas not found page

--- a/views/layout-content.jade
+++ b/views/layout-content.jade
@@ -12,7 +12,7 @@ html
             .span8.offset2.logo
                 h1.pull-left
                     a(class="brand", href="/")
-                        img(alt="Business Model Design", src="images/logo.png")
+                        img(alt="Canvas Model Design", src="/images/logo.png")
                 ul.pull-right
                     li
                         a(href='/about') About
@@ -27,7 +27,7 @@ html
                         i(class='icon-heart')
                     iframe(src="http://nodeknockout.com/iframe/intergrupo-mobile", frameborder='0', scrolling='no', allowtransparency='true', width='115', height='20')
                     a(class="Intergrupo", href="http://www.intergrupo.com")
-                        img(alt="Logo intergrupo mobile", src="images/logo-mobile.png", class="pull-right")
+                        img(alt="Intergrupo Mobile", src="/images/logo-mobile.png", class="pull-right")
     script(src='/javascripts/jquery.js')
 
     script(src='/javascripts/bootstrap.js')
