--- a/views/canvas/canvas.jade
+++ b/views/canvas/canvas.jade
@@ -3,7 +3,7 @@ extends ../layout
 block content
   .span9
       h2 #{canvas.title}
-        small Canvas type
+        small &nbsp;#{canvas.type}
 
       div#menubar
         div.dropdown
@@ -20,8 +20,10 @@ block content
               img(alt="Add yellow postit", src="../images/sticky_yellow.png")
           a#save_canvas
             img(alt="Save", src="../images/save_on.png")
+          a(id="fork_canvas", href='/canvas/#{canvas.public_id}/fork')
+            img(alt="Duplicate", src="/images/duplicate_on.png")
 
-      
+
 
       div(role='main', id='main')
         canvas(id='canvas', width=940, height=530, data-canvas-id='#{canvas.public_id}') Here comes the canvas
