--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ block content
             ul(class="roundabout")
                 li
                     h4 Business Model Canvas
-                    a(class="create", href='#canvas-new-modal', role='button', data-toggle='modal', title="Business Model Canvas" , rel='BMC')    
+                    a(class="create", href='#canvas-new-modal', role='button', data-toggle='modal', title="Business Model Canvas" , rel='BMC')
                         img(alt="Business Model Canvas", src="images/canvas_bmg.png", data-toggle='modal' )
                         | Click to create
                 li
@@ -19,16 +19,16 @@ block content
                     a(class="create",href='#canvas-new-modal', role='button', data-toggle='modal', title="Business Model You", rel='BMY')
                         img(alt="Business Model You", src="images/canvas_bmy.png", data-toggle='modal' )
                         | Click to create
-                
+
     .span12
     .row-fluid
         .span4.BMC
             h4.bg-highlight Business Model Canvas
-            a(class="create",href='#canvas-new-modal', role='button', data-toggle='modal', title="Business Model Canvas" , rel='BMC')    
+            a(class="create",href='#canvas-new-modal', role='button', data-toggle='modal', title="Business Model Canvas" , rel='BMC')
                 img(alt="Business Model Canvas", src="images/canvas_bmg.png", data-toggle='modal' )
             br
             br
-            p 
+            p
                 |The Business Model Canvas is a strategic and analytical tool proposed by Alexander Osterwalder in Business Model Generation. It is an entrepreneurial tool preformatted which allows you to design, develop and sketch out new or existing business models.
                 br
                 br
@@ -43,7 +43,7 @@ block content
                 img(alt="Lean Canvas", src="images/canvas_lean.png", data-toggle='modal' )
             br
             br
-            p 
+            p
                 |Lean Canvas is an adaptation created by Ash Maurya of the Business Model Canvas.
                 br
                 br
@@ -57,7 +57,7 @@ block content
                 img(alt="Business Model You", src="images/canvas_bmy.png", data-toggle='modal' )
             br
             br
-            p 
+            p
                 |"The idea driving Business Model You! is that by considering ourselves single-person enterprises, we can use the Canvas to develop "personal business models" to improve or even reinvent our work lives." - Tim Clark, Business Model You
                 br
                 br
@@ -71,11 +71,11 @@ block content
         form(action='/canvas/create', method='POST', class='form-vertical')
             .modal-header
                 button(type='button', class='close', data-dismiss='modal', aria-hidden='true') x
-                h3 Setup your 
+                h3 Setup your&nbsp;
                     span(id="modalTitle")
             .modal-body
                 input(name='title', type='text', placeholder='Canvas title')
-                input(name='type', type='hidden', placeholder='Canvas type')
+                input(name='type', type='hidden')
             .modal-footer
                 button(class='btn', data-dismiss='modal', aria-hidden='true') Cancel
                 button(type='submit', class='btn btn-primary') Create!
