Add share button

--- a/views/canvas/canvas.jade
+++ b/views/canvas/canvas.jade
@@ -22,6 +22,8 @@ block content
             img(alt="Save", src="../images/save_on.png")
           a(id="fork_canvas", href='/canvas/#{canvas.public_id}/fork')
             img(alt="Duplicate", src="/images/duplicate_on.png")
+          a(id='share_canvas', href='#')
+            img(alt='Share', src='/images/share_on.png')
 
 
 
