--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -87,6 +87,10 @@ h4 {
   padding-left:40px;
 }
 
+.share {
+  margin-top: -50px !important;
+}
+
 .canvas-menu {
   margin: 0 auto;
   background-color: #6ec568;
