--- a/views/canvas/canvas.jade
+++ b/views/canvas/canvas.jade
@@ -7,8 +7,8 @@ block content
 
       div#menubar
         div.dropdown
-          a#add_postit(data-toggle="dropdown", role="button", href="#")
-            img(alt="Add postit", src="../images/PostIt_on.png")
+          a#add_postit(href='#', data-toggle="dropdown", role="button", title="Add postit")
+            img(alt="Add postit", title='Add postit', src="../images/PostIt_on.png")
           div.dropdown-menu(role="menu")
             a#blue_stickie.stickie(data-color-id=1, href="#")
               img(alt="Add blue postit", src="../images/sticky_blue.png")
@@ -18,11 +18,11 @@ block content
               img(alt="Add red postit", src="../images/sticky_red.png")
             a#yellow_stickie.stickie(data-color-id=4, href="#")
               img(alt="Add yellow postit", src="../images/sticky_yellow.png")
-          a#save_canvas(href="#")
-            img(alt="Save", src="../images/save_on.png")
+          a#save_canvas(href='')
+            img(alt="Save", title="Save", src="../images/save_on.png")
           a(id="fork_canvas", href='/canvas/#{canvas.public_id}/fork')
-            img(alt="Duplicate", src="/images/duplicate_on.png")
-          a(id='share_canvas', href='#')
+            img(alt="Duplicate", title="Duplicate", src="/images/duplicate_on.png")
+          a(id='share_canvas', href='#', class='hide')
             img(alt='Share', src='/images/share_on.png')
 
       div(role='main', id='main')
