--- a/views/canvas/canvas.jade
+++ b/views/canvas/canvas.jade
@@ -3,7 +3,7 @@ extends ../layout
 block content
   .span9
       h2 #{canvas.title}
-        small &nbsp;#{canvas.type}
+        small.type &nbsp;#{canvas.type}
 
       div#menubar
         div.dropdown
